Include demonstrator of integrating clock page in twin_pane

--- a/packages/client/public/twin_pane.html
+++ b/packages/client/public/twin_pane.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <FRAMESET ROWS="10%,90%">
-        <FRAME SRC="http://www.clocktab.com/" NAME="frm1" ID="frm1">
+    <FRAMESET ROWS="5%,95%">
+        <FRAME SRC="http://192.168.1.111:8000/clock.html" NAME="frm1" ID="frm1">
         <FRAME SRC="/serge/player" NAME="frm2" ID="frm2">
     </FRAMESET>
 </html>
