Switch to reading coords from json file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <script src="./honeycomb.js"></script>
     <script src="./mouse_pos/L.Control.MousePosition.js"></script>
+    <script src="./cell_details.js"></script>
     <link rel="stylesheet" href="./mouse_pos/L.Control.MousePosition.css"/>
     <style>
       html, body{
