Use parameter to specify location of public folder

--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -4,7 +4,7 @@
     <base href="/" />
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" href="./leaflet.css"/>
+    <link rel="stylesheet" href="%PUBLIC_URL%/leaflet.css"/>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
